Fixed action and menu reference formatting

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -45,17 +45,17 @@ for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
 <P CLASS="Para">&nbsp;</P>
 <P CLASS="Para">
  If you decided to experiment by rearranging your Workbench, this is probably a
- good opportunity to use the Window &gt; Reset Perspective menu operation. The reset
+ good opportunity to use the <b>Window &gt; Reset Perspective</b> menu operation. The reset
 operation restores the layout to its original state.</P>
 <P CLASS="Para">
-You can display a view by selecting it from the Window &gt; Show View
+You can display a view by selecting it from the <b>Window &gt; Show View</b>
 menu. A perspective determines the views you are likely to need and shows these on the
-Show View submenu. Additional views are available by choosing
-Other... at the bottom of the Show View submenu. As we will see later this is
+<b>Show View</b> submenu. Additional views are available by choosing
+<b>Other...</b> at the bottom of the <b>Show View</b> submenu. As we will see later this is
 just one of the many features that allows you to build your own custom work
 environment.&nbsp;</P>
 <P CLASS="Para" align="center">
-<img src="../images/Image4_showview.gif" alt="" border="0" width="602" height="471"> Show View menu" width="645" height="497" ></P>
+<img src="../images/Image4_showview.gif" alt="Show View menu" border="0" width="602" height="471"></P>
 
 
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14" ></a>
