--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
@@ -15,11 +15,11 @@ Now that we have familiarized ourselves with the basic elements of the Workbench
 let's create our first project. New projects, folders, and files can be created using several different approaches.
 In this section we will create resources using three different approaches:</P>
 <ol>
-  <li>File menu</li>
+  <li><b>File</b> menu</li>
   <li>Navigator context menu</li>
   <li>New Wizard button</li>
 </ol>
-<P>We will start by creating a project using the File menu. Once we have our
+<P>We will start by creating a project using the <b>File</b> menu. Once we have our
 project we will create a folder and file.
 </P>
 
