--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
@@ -16,25 +16,25 @@ our folder using the Navigator view's popup menu.</P>
   <li> 
     <P CLASS="Para"> Activate the Navigator view and select the project JaneQUser 
       (the first project we created in the Navigator view). From the view's popup 
-      menu choose New &gt; Folder.</P>
+      menu choose <b>New &gt; Folder</b>.</P>
   </li>
   <li> 
     <P CLASS="Para"> In the New Folder wizard, your project name appears by default 
-      in the <i>Enter or select the parent folder </i> field. This is because 
+      in the <b>Enter or select the parent folder </b> field. This is because 
       we chose to create the new folder from your project's context menu.</P>
   </li>
   <li> 
-    <P CLASS="Para"> In the <i> Folder name</i> field, type a unique name for 
+    <P CLASS="Para"> In the <b> Folder name</b> field, type a unique name for 
       your new folder (e.g., using your first and last names in the title). Do 
       not use spaces or special characters in the folder name (e.g., &quot;JanesFolder&quot;).</P>
     <P CLASS="Para"> <img src="../images/Image14_new_folder_wizard.gif" alt="New Folder Wizard" border="0" width="438" height="649"></P>
   </li>
   <li> 
-    <P CLASS="Para"> Click Finish when you are done. The Navigator view will update 
+    <P CLASS="Para"> Click <b>Finish</b> when you are done. The Navigator view will update 
       to show your newly created folder.</P>
   </li>
 </ol>
-<P>Note that there is now also an Advanced button. This button when selected allows 
+<P>Note that there is now also an <b>Advanced</b> button. This button when selected allows 
   you to enter a location outside of a projects hierarchy as the location for 
   one of its folders. This is called a linked folder.</P>
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a> 
