--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -10,32 +10,32 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
 Using the New button</h3>
-<P CLASS="Para">We have seen how to create resources using File &gt; New and New
+<P CLASS="Para">We have seen how to create resources using <b>File &gt; New</b> and <b>New</b>
 from the Navigator's context menu. We will now create a file for our project using
-the third alternative, the New button.</P>
+the third alternative, the toolbar <b>New</b> button.</P>
 <ol>
   <li>
 <P CLASS="Para">Select the folder JanesFolder in the Navigator view.</P>
   </li>
   <li>
 <P CLASS="Para">In the Workbench window's toolbar, activate the drop-down menu on the New Wizard button <img src="../images/Image15_new_button.gif" alt="New Wizard Button" border="0" width="45" height="24">
- and select File. To activate the drop-down menu simply click on the down arrow.</P>
+ and select <b>File</b>. To activate the drop-down menu simply click on the down arrow.</P>
 <P CLASS="Para">
 <img src="../images/Image16_new_pulldown.gif" alt="New Wizard Pulldown" border="0" width="109" height="111"></P>
   </li>
   <li>
     <P CLASS="Para"> In the New File wizard, your folder's name and path already
-      appear by default in the <i> Enter or select the parent folder </i> field. 
+      appear by default in the <b> Enter or select the parent folder </b> field. 
       This is because you chose to create the new file while this folder was selected 
       in the Navigator view and the view was active.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the <i> File name </i> field, type a unique name for a new text file, including the .txt file extension. Do not use spaces or special characters in this file name (e.g., &quot;JanesFile.txt&quot;).</P>
+In the <b> File name</b> field, type a unique name for a new text file, including the .txt file extension. Do not use spaces or special characters in this file name (e.g., &quot;JanesFile.txt&quot;).</P>
   </li>
   <li>
 <P CLASS="Para">
-Click Finish when you are done.</P>
+Click <b>Finish</b> when you are done.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -72,17 +72,17 @@ view is active.</P>
 <P CLASS="Para">
 Click the New Wizard button in the Workbench toolbar. Previously we clicked on
 the drop-down arrow of the New button. Here we clicked on the button itself
-which has the same effect as choosing File &gt; New &gt; Other...&nbsp;</P>
+which has the same effect as choosing <b>File &gt; New &gt; Other...</b></P>
   </li>
   <li>
 <P CLASS="Para">
-In the New wizard, click Simple in the left pane, and in the right pane, click File. Then click Next.&nbsp;</P>
+In the New wizard, click <b>Simple</b> in the left pane, and in the right pane, click <b>File</b>. Then click <b>Next</b>.&nbsp;</P>
   </li>
-  <li>Once again, your folder's name and path appears by default in the <i> Enter or select the parent folder
-</i> field.</li>
+  <li>Once again, your folder's name and path appears by default in the <b> Enter or select the parent folder
+</b> field.</li>
   <li>
 <P CLASS="Para">
-In the <i> File name </i> field, type a unique name for an .ini file. Do not use any spaces or special characters in the file name (e.g., &quot;JanesINIFile.ini&quot;). Click Finish when you are done.</P>
+In the <b>File name</b> field, type a unique name for an .ini file. Do not use any spaces or special characters in the file name (e.g., &quot;JanesINIFile.ini&quot;). Click Finish when you are done.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -103,11 +103,11 @@ closely you can also see a second, inactive editor tab, &quot;Welcome&quot;.&nbs
 
 
 <P>Click on the Welcome editor tab. Now select the file JanesINIFile.ini in the 
-  Navigator view. Then select the Link with Editor button on the Navigator view. 
+  Navigator view. Then select the <b>Link with Editor</b> button on the Navigator view. 
   Lastly, click on the editor tab for JanesFile.txt. Notice how the Navigator 
   updated itself to select the file you are currently editing (JanesFile.txt). 
   If you don't like this automatic update you can easily turn it off by deselecting 
-  the Link with Editor button.</P>
+  the <b>Link with Editor</b> button.</P>
 
 
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
