--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
@@ -38,7 +38,7 @@ To close the editor, do one of the following options:</P>
   </li>
   <li>
     <p CLASS="Para">
-    Choose File &gt; Close from the menubar.
+    Choose <b>File &gt; Close</b> from the menubar.
   </li>
 </ul>
   </li>
@@ -51,13 +51,13 @@ Note that you are prompted to save the file before the editor is closed.</P>
 Click OK to save your changes and close the editor.</P>
   </li>
 </ol>
-<P>If you closed the editor using File &gt; Close you may have noticed the
-option File &gt; Close All. This is a quick way to close all of your open
-editors. If you choose File &gt; Close All, you will be prompted to choose which
+<P>If you closed the editor using <b>File &gt; Close</b> you may have noticed the
+option <b>File &gt; Close All</b>. This is a quick way to close all of your open
+editors. If you choose <b>File &gt; Close All</b>, you will be prompted to choose which
 editors with unsaved changes you want to save.
 </P>
 
-<P>If you choose Window &gt; Preferences then Workbench &gt; Editors, you will
+<P>If you choose <b>Window &gt; Preferences</b> then <b>Workbench &gt; Editors</b>, you will
 find the preference to close editors automatically. There you can configure
 how many editors are opened before editors are reused and what should happen when
 all editors have unsaved changes.
