--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
@@ -31,7 +31,7 @@ Drag the file JanesFile.txt from the Navigator to the file system explorer.</P>
   <li>
 <p CLASS="Para">
 The export can also be achieved by selecting the file in the Navigator and
-choosing Edit &gt; Copy, then
+choosing <b>Edit &gt; Copy</b>, then
 <p CLASS="Para">pasting it in the file system explorer.
   </li>
 </ol>
