--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -18,11 +18,11 @@ You can use the Export wizard to export from the Workbench to the file system.</
 Select the project JaneQuser in the Navigator. </P>
   </li>
   <li>
-    <P CLASS="Para"> From the popup menu, select Export.</P>
+    <P CLASS="Para"> From the popup menu, select <b>Export</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the Export wizard, select File system, then click Next.</P>
+In the Export wizard, select <b>File system</b>, then click <b>Next</b>.</P>
 <P CLASS="Para">
 <img src="../images/Image42_export.gif" alt="Export Wizard" border="0" width="470" height="550"></P>
   </li>
@@ -31,25 +31,25 @@ In the Export wizard, select File system, then click Next.</P>
 pane ensure that only JanesINIFile.ini is checked.&nbsp; Notice the folder and
 project in the left pane now have a grayed checkbox indicating that some, but
 not all, of their contents will be exported.</p>
-<p class="Para">You can use the Select Types... button to filter the types of
+<p class="Para">You can use the <b>Select Types</b> button to filter the types of
 resources you want to export.</p>
 <p class="Para">If we had known ahead of time that we only wanted to export
 JanesINIFile.ini we could have simply selected it in the Navigator and chosen
-File &gt; Export. The Export wizard would have automatically ensured it was the
+<b>File &gt; Export</b>. The Export wizard would have automatically ensured it was the
 only file checked for export.</p>
 <p class="Para">
 <img src="../images/Image43_export_tree.gif" alt="Export Wizard" border="0" width="573" height="563"></p>
   </li>
   <li>
-    <P CLASS="Para"> In the <i> To directory</i> field, type or browse to select 
+    <P CLASS="Para"> In the <b> To directory</b> field, type or browse to select 
       a location in the file system where you want the exported resources to reside.</P>
 <P CLASS="Para">
 If you enter the name of a directory that does not exist the Export wizard will
-offer to create it for you once you press Finish.</P>
+offer to create it for you once you press <b>Finish</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the Options area, you can choose to:			 </P>
+In the <b>Options</b> area, you can choose to:</P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
 Overwrite existing resources without warning </LI>
@@ -59,7 +59,7 @@ Create directory structure for files or Create only selected directories</LI>
   </li>
   <li>
 <P CLASS="Para">
-Click Finish when you are done.</P>
+Click <b>Finish</b> when you are done.</P>
   </li>
 </ol>
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14" ></a>
