--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -40,7 +40,7 @@ Drag the file over JaneQUser2 and release the mouse button.</P>
 Notice that the file is copied into the Workbench and placed into JaneQUser2.</P>
   </li>
   <li>This can also be achieved by copying the file in the file system explorer,
-then selecting the destination in the Navigator and choosing Edit &gt; Paste.
+then selecting the destination in the Navigator and choosing <b>Edit &gt; Paste</b>.
   </li>
 </ol>
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
