--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -21,13 +21,13 @@ project (JaneQUser2) we will see how easy it is to delete the project.&nbsp;</P>
 To delete the project do one of the following:</P>
 <ul>
   <li>
-    From the project's pop-up menu choose Delete<p>
+    From the project's pop-up menu choose <b>Delete</b><p>
   </li>
   <li>
     Press the DEL key<p>
   </li>
   <li>
-    Choose Edit &gt; Delete from the pull-down menu<p>
+    Choose <b>Edit &gt; Delete</b> from the pull-down menu<p>
   </li>
 </ul>
   </li>
@@ -46,13 +46,12 @@ You can:</P>
     contents in the file system</p>
   </li>
 </ul>
-    <p CLASS="Para">Just accept the default (do not delete contents) and press 
-      Yes. Note that this is only an option for projects. Files and folders are 
+    <p CLASS="Para">Just accept the default (do not delete contents) and click
+      <b>Yes</b>. Note that this is only an option for projects. Files and folders are 
       always deleted from the file system when deleted.</p>
   </li>
 </ol>
-<P> The same steps
-work for any resource shown in the Navigator.
+<P> The same steps work for any resource shown in the Navigator.
 <br>
 </P>
 
