--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
@@ -27,7 +27,7 @@ Double-click the file in the Navigator view to launch the external editor.</P>
 <P CLASS="Para">
 If an editor for INI files is not registered with your underlying operating
 system the Workbench will attempt to use its own default text editor. If this
-happens and you are still determined&nbsp; to see an external editor you can
+happens and you are still determined to see an external editor you can
 import another file (see previous sections) that is associated with a third
 party editor. Double click again on this new file and you should see your
 favorite editor open in its own window.</P>
