--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
@@ -35,7 +35,7 @@ Return to the Workbench and in the Navigator view, select the project JaneQUser.
   </li>
   <li>
 <P CLASS="Para">
-Choose Refresh from the project's context menu. This instructs the
+Choose <b>Refresh</b> from the project's context menu. This instructs the
 Workbench to look for any changes to the project that have been made in the
 local file system by external tools.</P>
   </li>
@@ -45,7 +45,7 @@ Select the file JanesINIFile.ini.</P>
   </li>
   <li>
 <p CLASS="Para">
-For a little variety choose Open With &gt; Text Editor from the file's
+For a little variety choose <b>Open With &gt; Text Editor</b> from the file's
 popup menu.</p>
   </li>
   <li>
