--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
@@ -25,12 +25,12 @@ In the Navigator view, select JanesFile.txt.</p>
   </li>
   <li>
 <P CLASS="Para">
-From the file's context menu, select Copy (or Ctrl+C)</P>
+From the file's context menu, select <b>Copy</b> (or Ctrl+C)</P>
   </li>
   <li>In the Navigator view, select JanesOtherFolder as the destination.</li>
   <li>
 <p CLASS="Head">
-From the folder's context menu, select Paste (or Ctrl+V).</p>
+From the folder's context menu, select <b>Paste</b> (or Ctrl+V).</p>
   </li>
 </ol>
 <P>We have seen how to copy files using the copy operation. It is also
