--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
@@ -17,10 +17,10 @@ its file to be a subfolder of our original folder JanesFolder.</p>
   <li>In the Navigator view, select JanesOtherFolder. </li>
   <li>
 <P CLASS="Para">
-From the file's context menu, select Move.</P>
+From the file's context menu, select <b>Move</b>.</P>
   </li>
   <li>
-<p CLASS="Para">In the Folder Selection dialog choose JanesFolder and click OK.</p>
+<p CLASS="Para">In the Folder Selection dialog choose JanesFolder and click <b>OK</b>.</p>
 <blockquote>
 <p CLASS="Para"><img src="../images/Image48_move.gif" alt="Folder dialog" border="0" width="350" height="471"></p>
 </blockquote>
