--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -24,7 +24,7 @@ associate a task with our&nbsp;JanesFile.txt:</P>
       is the vertical bar to the left of the main text area.</P>
   </li>
   <li> 
-    <P CLASS="Para"> From the marker bar's context menu, select Add Task.</P>
+    <P CLASS="Para"> From the marker bar's context menu, select <b>Add Task</b>.</P>
     <P CLASS="Para"> The marker bar displays any marker including bookmarks, task 
       markers (for associated tasks), and/or debugging breakpoints. You can associate 
       various markers with specific lines in a file by accessing the context menu 
@@ -32,14 +32,14 @@ associate a task with our&nbsp;JanesFile.txt:</P>
     <P CLASS="Para"> <img src="../images/Image53_marker1.gif" alt="Marker bar menu" border="0" width="299" height="153"></P>
   </li>
   <li> 
-    <P CLASS="Para"> In the <i>Description</i> field, type a brief description 
+    <P CLASS="Para"> In the <b>Description</b> field, type a brief description 
       for the task you want to associate with that line in the text file.</P>
     <blockquote> 
       <P CLASS="Para"> <img src="../images/Image53_add_task_dlg.gif" alt="Add Task dialog" border="0" width="611" height="256"></P>
     </blockquote>
   </li>
   <li> 
-    <P CLASS="Para"> Click OK when you are done.</P>
+    <P CLASS="Para"> Click <b>OK</b> when you are done.</P>
   </li>
   <li> 
     <P CLASS="Para"> Notice that a new task marker appears in the marker bar, 
@@ -66,9 +66,9 @@ associate a task with our&nbsp;JanesFile.txt:</P>
       you just created.</P>
   </li>
   <li> 
-    <P CLASS="Para"> Select Mark Completed. </P>
+    <P CLASS="Para"> Select <b>Mark Completed</b>. </P>
   </li>
-  <li>Now select Delete Completed Tasks from the marker's context menu.</li>
+  <li>Now select <b>Delete Completed Tasks</b> from the marker's context menu.</li>
   <li> 
     <P CLASS="Para"> Notice that the task marker disappears from the marker bar 
       and the task is removed from the Tasks view.</P>
