--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
@@ -15,7 +15,7 @@ locations within a file. In this section we will set several bookmarks and
 view them using the Bookmarks view.</p>
 <ol>
   <li>
-<p CLASS="Head">From the menubar, select Window &gt; Show View &gt; Bookmarks. The
+<p CLASS="Head">From the menubar, select <b>Window &gt; Show View &gt; Bookmarks</b>. The
 Bookmarks view appears in the Workbench.&nbsp;</p>
   </li>
   <li>
@@ -24,7 +24,7 @@ Edit the file JanesFile.txt</P>
   </li>
   <li>
 <P CLASS="Para">
-Position your cursor over the editor's marker bar next to any line in the file. Then, from the context menu on the marker bar, select Add Bookmark.</P>
+Position your cursor over the editor's marker bar next to any line in the file. Then, from the context menu on the marker bar, select <b>Add Bookmark</b>.</P>
 <blockquote>
 <P CLASS="Para">
 <img src="../images/Image54_bookmark_menu.gif" alt="Bookmark Menu" border="0" width="277" height="110"></P>
@@ -49,7 +49,7 @@ The new bookmark also appears in the Bookmarks view.</P>
   <li>
 <P CLASS="Para">
 In the Navigator view select the file JanesText.txt. From the file's popup menu
-choose Add Bookmark</P>
+choose <b>Add Bookmark</b></P>
 <P CLASS="Para">
 This will bookmark the file using the filename to describe the bookmark. Observe the Bookmarks view now contains two
 bookmarks.</P>
