--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
@@ -34,7 +34,7 @@ supports two additional ways to open the file associated with a selected bookmar
 
 
 <ol>
-  <li>From the bookmark's context menu choose Go To&nbsp;</li>
+  <li>From the bookmark's context menu choose <b>Go To</b></li>
   <li>From the view's toolbar click on the Go To toolbar button <img src="../images/Image54_bookmark_goto.gif" alt="Bookmark goto button" border="0" width="29" height="22"></li>
 </ol>
 <P>The Bookmarks view allows you to select the associated file in the Navigator.
@@ -43,7 +43,7 @@ supports two additional ways to open the file associated with a selected bookmar
 
 <ol>
   <li>In the Bookmarks view, select My Bookmark.</li>
-  <li>From the bookmark's context menu choose Show in Navigator. </li>
+  <li>From the bookmark's context menu choose <b>Show in Navigator</b>. </li>
   <li>
 <P CLASS="Para">
 Notice that the Navigator view is now visible and the file JanesFile.txt is
