--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
@@ -18,7 +18,7 @@ have created.</p>
 In the Bookmarks view, select JanesFile.txt (the second bookmark we created) and do one of the following:</P>
 <ul>
   <li>
-    Click the Delete&nbsp; button <img src="../images/Image54_bookmark_del1.gif" alt="Bookmark delete button" border="0" width="27" height="22">
+    Click the Delete button <img src="../images/Image54_bookmark_del1.gif" alt="Bookmark delete button" border="0" width="27" height="22">
     on the view's toolbar.
   </li>
   <li>
@@ -38,11 +38,11 @@ Notice that the bookmark is removed from the Bookmarks view.</P>
   line in the file JanesFile.txt. There are two other approaches to removing 
   this bookmark. 
   <ul>
-  <li>Use Remove Bookmark in the marker bar of the JanesFile.txt editor. You may 
-  recall that we used Add Bookmark in the marker bar when we first created the 
+  <li>Use <b>Remove Bookmark</b> in the marker bar of the JanesFile.txt editor. You may 
+  recall that we used <b>Add Bookmark</b> in the marker bar when we first created the 
   bookmark.<br>
     <img src="../images/Image54_bookmark_remove2.gif" alt="Bookmark menu" border="0" width="267" height="154"></li>
-  <li>Delete the bookmark (as we did above) by using Delete from the bookmark's
+  <li>Delete the bookmark (as we did above) by using <b>Delete</b> from the bookmark's
     popup menu in the Bookmarks view.</li>
   </ul>
 <p>Let's go with the second approach.&nbsp;</p>
@@ -54,7 +54,7 @@ will allow us to watch the editor update as we delete the bookmark.</P>
   </li>
   <li>
 <p CLASS="Head">In the Bookmarks view, select JanesFile.txt (the remaining
-bookmark). Click the&nbsp; Delete button <img src="../images/Image54_bookmark_del1.gif" alt="Bookmark delete button" border="0" width="27" height="22">
+bookmark). Click the Delete button <img src="../images/Image54_bookmark_del1.gif" alt="Bookmark delete button" border="0" width="27" height="22">
     on the view's toolbar.
 Notice that the bookmark is removed from the Bookmarks view and the
 JanesFile.txt editor.&nbsp; </p>
