--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -17,14 +17,14 @@ section we will learn how to rearrange these to customize the layout of the Work
 little housekeeping.</P>
 <ol>
   <li>
-<P CLASS="Para">Start by choosing Window &gt; Reset Perspective and selecting OK. This will reset the
+<P CLASS="Para">Start by choosing <b>Window &gt; Reset Perspective</b> and selecting <b>OK</b>. This will reset the
 current perspective to its original views and layout.</P>
   </li>
   <li>
 <P CLASS="Para">
 Ensure there are editors open for JanesFile.txt and JanesText.txt. Close any
-other editors including the Welcome Page. If you need to, you can always get back to the welcome page by choosing Help &gt; Welcome... and
-selecting Eclipse Platform.</P>
+other editors including the Welcome Page. If you need to, you can always get back to the welcome page by choosing <b>Help &gt; Welcome...</b> and
+selecting <b>Eclipse Platform</b>.</P>
   </li>
 </ol>
 <P>Your Workbench should now look like this:&nbsp;&nbsp;&nbsp;
