--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
@@ -15,7 +15,7 @@ can also rearrange the order of views within a tabbed notebook.</P>
 <ol>
   <li>
 <P CLASS="Para">
-Choose Window &gt; Reset Perspective to reset the Resource perspective back to its
+Choose <b>Window &gt; Reset Perspective</b> to reset the Resource perspective back to its
 original layout.&nbsp;</P>
   </li>
   <li>
