--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
@@ -13,14 +13,14 @@
 <ul>
   <li>
     To maximize a view you can either double click on its title
-    bar or choose Maximize from the popup menu available from the
+    bar or choose <b>Maximize</b> from the popup menu available from the
     top left corner of the view.</li>
   <li>
-    To maximize an editor double click on the editor tab or choose Maximize from the popup menu available from the
+    To maximize an editor double click on the editor tab or choose <b>Maximize</b> from the popup menu available from the
     editor tab.</li>
 </ul>
 <p CLASS="Para">Restoring a view to its original size is done in a similar
-manner (double click or choose Restore from the menu).</p>
+manner (double click or choose <b>Restore</b> from the menu).</p>
 
 
 <P>
