--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -38,7 +38,7 @@ Release the mouse button to drop the Navigator onto the shortcut bar. </P>
 </ol>
 <P>To create a fast view using the second approach we would started by popping
 up the context menu over icon in the top left corner of the Navigator
-view.&nbsp; From this menu we would have chosen Fast View.
+view. From this menu we would have chosen <b>Fast View</b>.
 </P>
 
 
