--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -36,7 +36,7 @@ mouse button down as you move the mouse. </p>
   </li>
   <li>
 <P CLASS="Para">
-To hide the fast view simply click on another view or editor or click on the Minimize button on
+To hide the fast view simply click on another view or editor or click on the <b>Minimize</b> button on
 the fast view's toolbar </P>
 <P CLASS="Para">
 <img src="../images/Image61_fast_minimize.gif" alt="Minimize fast icon" border="0" width="242" height="94"> </P>
@@ -53,7 +53,7 @@ the fast view will automatically hide itself to allow you to work with the file.
   <li>Click the Fast View button on the fast view's toolbar <br>
     <img src="../images/Image61_fast_restore.gif" alt="Restore fast icon" border="0" width="241" height="102"><br>
   </li>
-  <li>Choose Fast View from the context menu of the icon in the top left corner of
+  <li>Choose <b>Fast View</b> from the context menu of the icon in the top left corner of
     the view. </li>
   <li>Drag the fast view icon from the tool bar, and drop it somewhere in the Workbench
   window.
