--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -18,7 +18,7 @@ this Workbench window:</p>
     <img src="../images/Image70_shortcut2.gif" alt="Open Perspectives" border="0" width="22" height="24">
     on the shortcut bar.</li>
   <li>
-    Choosing a perspective from the Window &gt; Open Perspective menu.&nbsp;</li>
+    Choosing a perspective from the <b>Window &gt; Open Perspective</b> menu.&nbsp;</li>
 </ul>
 <p>We will open one by using the shortcut bar button.</p>
 <ol>
@@ -28,7 +28,7 @@ this Workbench window:</p>
       </li>
   <li>
         <p CLASS="Head">A menu appears showing the same choices as shown on the
-        Window &gt; Open Perspective menu. Choose Other from the menu.</p>
+        <b>Window &gt; Open Perspective</b> menu. Choose <b>Other</b> from the menu.</p>
         <blockquote>
           <p CLASS="Head">
           <img src="../images/Image70_shortcut3.gif" alt="Open Perspective Menu" border="0" width="184" height="184"></p>
@@ -36,7 +36,7 @@ this Workbench window:</p>
       </li>
   <li>
         <p CLASS="Para">In the Select Perspective dialog
-        choose Debug and click OK.&nbsp;
+        choose <b>Debug</b> and click <b>OK</b>.&nbsp;
         <blockquote>
         <p CLASS="Para">
         <img src="../images/Image70_select_pers.gif" alt="Select Perspective" border="0" width="247" height="322"></blockquote>
@@ -64,7 +64,7 @@ this Workbench window:</p>
       </li>
 </ol>
 <p CLASS="Head">Earlier in this tutorial we created a Navigator fast view by
-dragging the Navigator view onto the shortcut bar.&nbsp; If we do this again we
+dragging the Navigator view onto the shortcut bar. If we do this again we
 will observe that our shortcut bar now has three areas:</p>
 <ol>
   <li>
