--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
@@ -14,11 +14,11 @@ perspectives</h3>
 can also control several other key aspects of a perspective. These include:</p>
 <ul>
   <li>
-    the New menu</li>
+    the <b>New</b> menu</li>
   <li>
-    the Window &gt; Open Perspective menu</li>
+    the <b>Window &gt; Open Perspective</b> menu</li>
   <li>
-    the Window &gt; Show View menu</li>
+    the <b>Window &gt; Show View</b> menu</li>
   <li>
     action sets that show up on the toolbar</li>
 </ul>
@@ -28,11 +28,11 @@ can also control several other key aspects of a perspective. These include:</p>
         <p CLASS="Para">In the shortcut bar click on the Resource perspective.&nbsp;</p>
       </li>
   <li>
-        <p CLASS="Para">Select Window &gt; Customize Perspective...&nbsp;</li>
+        <p CLASS="Para">Select <b>Window &gt; Customize Perspective...</b></li>
   <li>
-        <p CLASS="Para">Expand Other.&nbsp;</p>
+        <p CLASS="Para">Expand <b>Other</b>.&nbsp;</p>
       </li>
-  <li>Check Launch and click OK.
+  <li>Check <b>Launch</b> and click <b>OK</b>.
         <blockquote>
           <p>
           <img src="../images/Image71_pers_customize.gif" alt="Customizing Perspective" border="0" width="417" height="479"></p>
@@ -48,7 +48,7 @@ can also control several other key aspects of a perspective. These include:</p>
   <li>
         <p CLASS="Para">When you have finished
         experimenting with the other options on the Customize Perspective dialog, choose
-        Window &gt; Reset Perspective to return the perspective to its original
+        <b>Window &gt; Reset Perspective</b> to return the perspective to its original
         state.&nbsp; </p>
       </li>
 </ol>
