--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
@@ -20,11 +20,11 @@ already learned about. </P>
 <ol>
   <li>
         <p CLASS="Para">Start by selecting all of the projects in the Navigator
-        and deleting them by using Delete on the pop-up menu.</p>
+        and deleting them by using <b>Delete</b> on the pop-up menu.</p>
       </li>
   <li>
-        <p CLASS="Para">Create a new simple project using File &gt; New &gt;
-        Project.... Be sure to give the project a distinct name&nbsp;by typing
+        <p CLASS="Para">Create a new simple project using <b>File &gt; New &gt;
+        Project</b>.  Be sure to give the project a distinct name by typing
         your name as the name of your new project (e.g., &quot;JaneQUserCompare&quot;).
         Do not use spaces or special characters in the project name.</li>
   <li>
