--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
@@ -12,7 +12,7 @@
 Simple compare</h3>
 <p CLASS="Head">
 Comparing files is easy. In the Navigator select file1.txt and file2.txt choose
-Compare With &gt; Each Other from the context menu.&nbsp;</p>
+<b>Compare With &gt; Each Other</b> from the context menu.&nbsp;</p>
 <p CLASS="Head">
 Well that wasn't very interesting. Right about now you are probably staring at a
 dialog like the one below, which tells us the two files are the same.&nbsp;</p>
@@ -38,10 +38,10 @@ follows:</p>
   This is line 4a and it is new<br>
   This is line 5.</i></p>
 </blockquote>
-<p>Save the contents of the file by choosing File &gt; Save (or pressing
+<p>Save the contents of the file by choosing <b>File &gt; Save</b> (or pressing
 Ctrl+S).</p>
 <p>Now we're really (honest we are) ready to do a compare. Once again select
-file1.txt and file2.txt and choose Compare With &gt; Each Other in the
+file1.txt and file2.txt and choose <b>Compare With &gt; Each Other</b> in the
 Navigator's context menu.</p>
 <p>A special compare editor opens. In the next section we will see how to use
 this compare editor.</p>
