--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
@@ -67,8 +67,8 @@ The Copy current change buttons allow you to merge a single change.&nbsp;&nbsp;<
       </li>
   <li>
         <p CLASS="Para">Close the compare editor and
-        choose Yes to save the changes. Alternatively you can save the changes
-        by choosing File &gt; Save (Ctrl+S).&nbsp;</p>
+        choose <b>Yes</b> to save the changes. Alternatively you can save the changes
+        by choosing <b>File &gt; Save</b> (Ctrl+S).&nbsp;</p>
       </li>
 </ol>
 
