--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
@@ -29,7 +29,7 @@ In the editor for sampleFile.txt modify the resource by adding the line
 a third line &quot;change3&quot; and save it again. </li>
   <li>
 <P CLASS="Para">
-From the resource's context menu in the Navigator view, select Replace With &gt; Local History.</P>
+From the resource's context menu in the Navigator view, select <b>Replace With &gt; Local History</b>.</P>
   </li>
   <li>
 <P CLASS="Para">The Replace from Local History dialog opens and shows the 
@@ -51,7 +51,7 @@ local history.&nbsp;&nbsp;</P>
   <li>Select the first item (shown above) in the local history. The right pane should
 show one line of text.&nbsp; </li>
   <li>
-<P CLASS="Para">Click Replace. This replaces the Workbench's copy of
+<P CLASS="Para">Click <b>Replace</b>. This replaces the Workbench's copy of
 sampleFile.txt with the chosen local history item.</P>
   </li>
   <li>
