--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
@@ -12,7 +12,7 @@
 Exiting the Workbench</h2>
 <P CLASS="Para">
 Each time you exit the Workbench, the Workbench is automatically saved, including all open perspectives and windows. The next time you reopen the Workbench, it will appear exactly as it was when you closed it.</P>
-<p> To exit the Workbench, select File &gt; Exit from the menu bar. You will be 
+<p> To exit the Workbench, select <b>File &gt; Exit</b> from the menu bar. You will be 
   prompted if you really wish to exit the workbench. Note that his dialog also 
   has an option to turn off the prompting if you wish.</p>
 
