--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -15,7 +15,7 @@
     the repository.&nbsp;</P>
 <ol>
   <li>
-  <P CLASS="Para">Create a new &quot;Simple&quot; project using File &gt; New &gt; Project.... Use
+  <P CLASS="Para">Create a new &quot;Simple&quot; project using <b>File &gt; New &gt; Project</b> Use
 your name as the project
 name (e.g. JanesTeamProject).&nbsp; </P>
   </li>
@@ -44,7 +44,7 @@ Their contents should be as follows:
 <P>We can continue to work with our project in this mode but unless we commit 
   the project into the repository others on our team will be unable to work on 
   the project with us. In the next few sections we will see how to commit our 
-  project to the&nbsp; repository. </P>
+  project to the repository. </P>
 
 
 <P><br>
