--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -18,7 +18,7 @@ specify an available repository.</p>
         working with. As you can see, the view is empty, meaning we still need 
         to specify a repository. </li>
   <li>In the context menu of the CVS Repositories 
-        view choose New &gt;&nbsp;Repository Location... 
+        view choose <b>New &gt;&nbsp;Repository Location</b>
         <blockquote> 
           <blockquote> 
             <p>
@@ -35,35 +35,35 @@ repository administrator in order to fill in the necessary information.
 </blockquote>
   </li>
   <li> 
-        <P CLASS="Para"> In the <i> Host </i> field, type the address of the host 
+        <P CLASS="Para"> In the <b> Host </b> field, type the address of the host 
           (e.g., &quot;teamsamples.com&quot;).</P>
   </li>
   <li> 
-        <P CLASS="Para"> In the <i> Repository path </i> field, type the path 
+        <P CLASS="Para"> In the <b> Repository path </b> field, type the path 
           for the repository at the host address (e.g., &quot;/home/cvsroot/repositoryName&quot;).</P>
   </li>
   <li> 
-        <P CLASS="Para">In the <i> User </i> field, type the user name under which 
+        <P CLASS="Para">In the <b> User </b> field, type the user name under which 
           you want to connect.</P>
   </li>
   <li> 
-        <P CLASS="Para">In the <i>Password</i> field, type your password.</P>
+        <P CLASS="Para">In the <b>Password</b> field, type your password.</P>
   </li>
   <li> 
         
-    <P CLASS="Para"> In the <i> Connection type </i> field, select the type of 
+    <P CLASS="Para"> In the <b> Connection type </b> field, select the type of 
       CVS connection for the repository (The default is pserver). </P>
   </li>
   <li>
-	  <P CLASS="Para"> Leave<i> Use Default Port</i> enabled.&nbsp;</P> 
+	  <P CLASS="Para"> Leave<b> Use Default Port</b> enabled.&nbsp;</P> 
       </li>
-  <li>By default the <i>Validate Connection on Finish<b> option
-        </b></i>is checked.&nbsp; </li>
+  <li>By default the <b>Validate Connection on Finish<b> option
+        </b></b>is checked.&nbsp; </li>
   <li>
 <P CLASS="Para">
-Click Finish when you are done.</P>
+Click <b>Finish</b> when you are done.</P>
 <P CLASS="Para">
-Since we checked <i>Validate location on finish, </i>the wizard will now attempt to
+Since we checked <b>Validate location on finish, </b>the wizard will now attempt to
 validate the information by connecting to the repository. In doing so it may prompt you for your password.
 Note that the repository connection is only used to validate the information.</P>
   </li>
