--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -19,7 +19,7 @@ In the Navigator view select the project JanesTeamProject.</P>
   </li>
   <li> 
       
-    <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
+    <P CLASS="Para">From the project's context menu choose <b>Team &gt; Share Project</b>. 
       If you have more than one repository provider installed, pick CVS and press 
       Next.</P>
   </li>
@@ -31,7 +31,7 @@ In the Navigator view select the project JanesTeamProject.</P>
 </blockquote>
   </li>
   <li>
-      <P CLASS="Para"> Click Finish when you are done.</P>
+      <P CLASS="Para"> Click <b>Finish</b> when you are done.</P>
   </li>
   <li>Observe that the Synchronize view automatically opens. In the next section 
     we will see how to use this view to commit our work to the repository. 
