--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -41,7 +41,7 @@ need to be committed.
 
 
 <P>The bottom area (#2 and #3) is the text compare area we worked with in the basic
-tutorial. By selecting a resource in the Structured Compare list the lower area
+tutorial. By selecting a resource in the <b>Structured Compare</b> list the lower area
 displays the differences between what we have in the Workbench (#2) versus what is currently
 in the repository (#3).
 </P>
