--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -18,14 +18,14 @@ ahead and commit the work we have done.
 <ol>
   <li>
 <P CLASS="Para">
-In the Structure Compare list select file1.txt</P>.
+In the <b>Structure Compare</b> list select file1.txt</P>.
 <blockquote>
 <P CLASS="Para">
 <img src="../images/Image82_repo_release.gif" alt="Structure Compare" border="0" width="380" height="165"></P>
 </blockquote>
   </li>
   <li>
-    <P CLASS="Para"> Pop-up the menu and choose Commit. Click OK when asked to 
+    <P CLASS="Para"> Pop-up the menu and choose <b>Commit</b>. Click <b>OK</b> when asked to 
       add and to supply a commit comment.</P>
   </li>
   <li>Observe that file1.txt is no longer in the list.
@@ -36,7 +36,7 @@ In the Structure Compare list select file1.txt</P>.
 the project and commit all of the changes in the project.</p>
   </li>
   <li>Select JanesTeamProject. </li>
-  <li>Choose Commit from the project's context menu and type in &quot;my first
+  <li>Choose <b>Commit</b> from the project's context menu and type in &quot;my first
 project&quot; when prompted for a commit comment.
 <p>Observe that the remaining resources in the project are committed and the
 structure compare list is now empty.&nbsp;</p>
@@ -56,15 +56,15 @@ contents:
   of file 3.</i></p>
 </blockquote>
   </li>
-  <li>Select the project (JanesTeamProject) and choose Team &gt; Synchronize with
-Repository again from the context menu.
+  <li>Select the project (JanesTeamProject) and choose <b>Team &gt; Synchronize with
+Repository</b> again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
   <p><img src="../images/Image82_repo_rel5.gif" alt="Outgoing mode" border="0" width="402" height="123"></p>
 </blockquote>
   </li>
-  <li>Select file3.txt, and choose Commit from the context menu. </li>
+  <li>Select file3.txt, and choose <b>Commit</b> from the context menu. </li>
 </ol>
 
 
