--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -18,7 +18,7 @@
 <p>Fred's first step is to add the project to his workspace as follows:</p>
 <ol>
   <li>In the CVS Repositories view context menu choose 
-      New &gt;&nbsp; Repository Location... 
+      <b>New &gt;&nbsp; Repository Location</b>
       <blockquote>
   <blockquote>
     <p><img src="../images/Image82_repo_new.gif" alt="Context menu" border="0" width="308" height="110"></p>
@@ -47,7 +47,7 @@ Jane created.</P>
   <p><img src="../images/Image83_fred2.gif" alt="Repositories View" border="0" width="302" height="286"></p>
 </blockquote>
   </li>
-  <li>Select the project and choose Checkout as Project 
+  <li>Select the project and choose <b>Checkout as Project</b>
       from the context menu. 
       <blockquote>
   <p><img src="../images/Image83_fred3_add.gif" alt="Add to Workspace" border="0" width="349" height="455"></p>
