--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -46,9 +46,9 @@ Another user making changes</h3>
 </blockquote>
   </li>
   <li>
-      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn on 
-      the CVS label decorations (on page Workbench &gt; Label Decorations check off 
-      CVS).</P>
+      <P CLASS="Para">Open the preferences (<b>Window &gt; Preferences</b>) and turn on 
+      the CVS label decorations (on page <b>Workbench &gt; Label Decorations</b> check off 
+      <b>CVS</b>).</P>
 <blockquote>
   <P CLASS="Para"><img src="../images/Image84_decorator_preference.gif" alt="Navigator View" border="0" width="531" height="440"></P>
 </blockquote>
@@ -62,12 +62,12 @@ Another user making changes</h3>
   <li>To commit his changes to the repository Fred 
       can either: 
       <ul>
-        <li>Select the two files and choose Team &gt; Synchronize with Repository 
+        <li>Select the two files and choose <b>Team &gt; Synchronize with Repository</b> 
           or,</li>
-        <li>Select the project and choose Team &gt; Synchronize with Repository</li>
+        <li>Select the project and choose <b>Team &gt; Synchronize with Repository</b></li>
       </ul>
       <p>Often choosing the project is the easiest thing to do. Let's do that. 
-        Select the project and choose Team &gt; Synchronize with Repository from 
+        Select the project and choose <b>Team &gt; Synchronize with Repository</b> from 
         its context menu.&nbsp;</p>
   </li>
   <li>When the Synchronize view opens Fred should 
