--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -39,9 +39,9 @@ Making our own changes</h3>
 </blockquote>
   </li>
   <li> 
-      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn on 
-      the CVS label decorations (on page Workbench &gt; Label Decorations and 
-      ensure CVS is checked).</P>
+      <P CLASS="Para">Open the preferences (<b>Window &gt; Preferences</b>) and turn on 
+      the CVS label decorations (on page <b>Workbench &gt; Label Decorations</b> and 
+      ensure <b>CVS</b> is checked).</P>
 <blockquote>
   <P CLASS="Para"><img src="../images/Image84_decorator_preference.gif" alt="Navigator View" border="0" width="531" height="440"></P>
 </blockquote>
@@ -57,8 +57,8 @@ Making our own changes</h3>
 Select the project (JanesTeamProject)</P>
   </li>
   <li>
-      <P CLASS="Para"> From the project's context menu, select Team &gt; Synchronize 
-        with Repository.</P>
+      <P CLASS="Para"> From the project's context menu, select <b>Team &gt; Synchronize 
+        with Repository</b>.</P>
   </li>
   <li>There are a couple of other things worth observing. First, the icon next 
         to file1.txt (in the structured compare area) indicates that file1.txt 
