--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -22,16 +22,16 @@
       of file3.txt has a change to the second line.&nbsp; The repository copy 
       is shown in the right pane. 
       <p><img src="../images/Image84_jane.gif" alt="Text compare" border="0" width="670" height="93"></li>
-  <li>From the context menu of file3.txt choose Commit. 
+  <li>From the context menu of file3.txt choose <b>Commit</b>. 
       Be sure to enter a meaningful description when prompted for one.&nbsp; <p>Your Workbench copy is now committed into the repository.</p>
     </li>
   <li>
-<p CLASS="Para"> At this point Fred may want to Synchronize 
+<p CLASS="Para"> At this point Fred may want to synchronize 
       with the repository to update his workspace with the changes you just committed.</p>
   </li>
 </ol>
 <P>We have successfully collaborated with Fred by making simultaneous changes 
-  to the same project. The Synchronize view&nbsp; and CVS Resource History 
+  to the same project. The Synchronize view and CVS Resource History 
   view allowed us to determine the specific changes each user was making and to 
   quickly stay on top of the ongoing changes being committed into the repository. 
 </P>
