--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -19,16 +19,16 @@ resource from the repository. To roll back to an earlier revision:</p>
 <p CLASS="Head"> In the Navigator view select the file1.txt</p>
   </li>
   <li>
-      <P CLASS="Para"> From the file's context menu, select Replace With &gt; 
-        Revision...</P>
+      <P CLASS="Para"> From the file's context menu, select <b>Replace With &gt; 
+        Revision</b></P>
   </li>
   <li>
       <P CLASS="Para"> In the replace with revision Compare editor that opens, 
         choose the original (bottom) revision and, from the pop-up menu choose 
-        Get Contents.</P>
+        <b>Get Contents</b>.</P>
   </li>
-  <li>Open the preferences (Window &gt; Preferences) and turn on the CVS label 
-  decorations (on page Workbench &gt; Label Decorations and ensure CVS is checked).
+  <li>Open the preferences (<b>Window &gt; Preferences</b>) and turn on the CVS label 
+  decorations (on page <b>Workbench &gt; Label Decorations</b> and ensure <b>CVS</b> is checked).
 <p><img src="../images/Image84_decorator_preference.gif" alt="Decorator Preference" border="0" width="531" height="440"></p>
       <p>Observe that the Navigator updates to show the CVS state of a resource. 
         Notice that the modified file is preceded by &quot;&gt; (see #1) indicating 
@@ -36,15 +36,15 @@ resource from the repository. To roll back to an earlier revision:</p>
       <p><img src="../images/Image84_replace2.gif" alt="File selection" border="0" width="227" height="151"></li>
   <li>Now that we have finished our coffee we realize 
       that this older revision is not as good as it initially seemed and in fact 
-      the revision in the repository is better after all.&nbsp; <p>Instead of choosing Team &gt; Synchronize with Repository, let's choose 
-        Replace With &gt; Latest from Repository.&nbsp;</p> <p>Observe that file1.txt is updated to be the contents from the repository, 
+      the revision in the repository is better after all.&nbsp; <p>Instead of choosing <b>Team &gt; Synchronize with Repository</b>, let's choose 
+        <b>Replace With &gt; Latest from Repository.</b></p> <p>Observe that file1.txt is updated to be the contents from the repository, 
         and that the leading indicator &quot;&gt;&quot; has been removed since 
         we now have the same revision as the repository. 
     </li>
 </ol>
 <P>We have seen how to synchronize with the repository, replace with revision 
   or replace with the latest from the repository. You can also compare with these 
-  revisions/versions in a similar manner by choosing the Compare With menu 
+  revisions/versions in a similar manner by choosing the <b>Compare With</b> menu 
   operation from a resource's context menu in the Navigator. </P>
 
 
