--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -21,11 +21,11 @@ project proceed as follows:</P>
   <li>
 <P CLASS="Para">Select the project JanesTeamProject.</P>
   </li>
-  <li>In the Navigator view select Team &gt; Tag as Version...</li>
+  <li>In the Navigator view select <b>Team &gt; Tag as Version...</b></li>
   <li>When the Tag Resources dialog opens enter the version name A1 and click 
-        OK.</li>
+        <b>OK</b>.</li>
   <li>Select the CVS Repositories view.</li>
-  <li>Expand Versions, and JanesTeamProject. Observe that under JaneTeamProject there 
+  <li>Expand <b>Versions</b>, and JanesTeamProject. Observe that under JaneTeamProject there 
         is now a version of this project whose version number is A1. Looking closely 
         at the contents of folder1 you can also see that the version numbers of 
         the individual files match the version numbers in our Workbench.
