--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
@@ -13,9 +13,9 @@
 <P CLASS="Para"> Ant buildfiles are just text files, so the most straightforward 
   way to create an Ant buildfile in Eclipse is:</P>
 <ol>
-  <li>File&gt;New&gt;File.</li>
+  <li><b>File &gt; New &gt; File</b>.</li>
   <li>Enter any name for the file, but make sure it has a .xml extension.</li>
-  <li>Click Finish.</li>
+  <li>Click <b>Finish</b>.</li>
 </ol>
 <p>As long as the file has a .xml extension, Eclipse will consider it to be a 
   possible Ant buildfile, and will enable Ant-related actions when it is selected.</p>
