--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
@@ -16,10 +16,10 @@
   this editor.</P>
 <ol>
   <li>Create an Ant buildfile called HelloWorld.xml (see the previous page if necessary).</li>
-  <li>Open the Ant editor on the file by selecting Open With&gt;Ant Editor from 
+  <li>Open the Ant editor on the file by selecting <b>Open With&gt;Ant Editor</b> from 
     the file's context menu. Note that the default editor for a .xml file is a 
-    simple text editor, but this can be changed in the Window&gt;Preferences&gt;Workbench&gt;File 
-    Associations. </li>
+    simple text editor, but this can be changed in the <b>Window &gt; Preferences &gt; Workbench &gt; File 
+    Associations</b>. </li>
   <li>Enter the following content in the editor.<img src="../images/Image600_editor_first_target.gif" alt="" border="0" width="487" height="270"></li>
   <li>Notice the syntax coloring for property values.</li>
   <li>Begin to enter a second target by typing '&lt;tar', then hit Ctrl-Space 
