--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
@@ -16,15 +16,15 @@
 <P CLASS="Para">In this section, we will cover the basic mechanisms for running 
   Ant buildfiles in Eclipse, using the HelloWorld.xml file created in the last section.</P>
 <ol>
-  <li>Select HelloWorld.xml in the Navigator and choose 'Run Ant...' from its 
+  <li>Select HelloWorld.xml in the Navigator and choose <b>Run Ant...</b> from its 
     context menu.</li>
   <li>The Run Ant dialog appears.<img src="../images/Image603_run_dialog.gif" alt="" border="0" width="474" height="631"><br>
   </li>
   <li>This dialog allows you to configure many aspects of the way your Ant buildfile 
-    is run, but for now we will concentrate on the Targets tab which allows you 
+    is run, but for now we will concentrate on the <b>Targets</b> tab which allows you 
     to select the Ant targets to run and their order. Select both targets and 
     leave the order as the default. </li>
-  <li>Click Run.</li>
+  <li>Click <b>Run</b>.</li>
   <li>The Ant buildfile is run, and the output is sent to the Console view.</li>
 </ol>
 <p>But what if you sometimes want to run the buildfile so the Hello target executed 
