--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
@@ -16,8 +16,8 @@
   of this view is that you can work with all of your Ant buildfiles in one place, 
   as opposed to hunting them down in the Navigator.</P>
 <ol>
-  <li>Open the Ant view from the workbench menu by selecting Window&gt;Show View&gt;Other...&gt;Ant&gt;Ant.</li>
-  <li>By default, the Ant view is empty. There are 2 ways to add Ant buildfiles to 
+  <li>Open the Ant view from the workbench menu by selecting <b>Window &gt; Show View &gt; Other... &gt; Ant &gt; Ant</b>.</li>
+  <li>By default, the Ant view is empty. There are two ways to add Ant buildfiles to 
     this view: 
     <ul>
       <li>Click the 'Add Build File' button. This brings up a dialog in which 
@@ -41,7 +41,7 @@
   <li>Select the top-level HelloWorld build file and click Play. Notice that just 
     the default target, Hello, gets executed.</li>
   <li>To edit your buildfile, bring up the context menu on the HelloWorld file and 
-    select Open With&gt;Ant Editor.</li>
+    select <b>Open With &gt; Ant Editor</b>.</li>
   <li>To edit the default launch configuration, select Properties... from the 
     context menu.</li>
   <li>The Run Ant dialog appears. Here you can modify the way in which the buildfile 
