--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
@@ -15,15 +15,15 @@
   follows:</P>
 <ol>
   <li> 
-    <P CLASS="Para">Create a new plugin project by menuing to File&gt;New&gt;Other...</P>
+    <P CLASS="Para">Create a new plugin project by menuing to <b>File &gt; New &gt; Other...</b></P>
   </li>
-  <li>Select 'Plug-in Development' in the left pane, and 'Plug-in Project' in 
-    the right and click Next.</li>
-  <li>Enter a name for your project, then click Next. </li>
-  <li>On the next page, accept all defaults and click Next.</li>
-  <li>Make sure 'Create a plug-in project using a code generation wizard' is selected, 
-    then select 'Hello, World' from the list below and click Next.</li>
-  <li>Accept all the defaults on this page and click Finish.</li>
+  <li>Select <b>Plug-in Development</b> in the left pane, and <b>Plug-in Project</b> in 
+    the right and click <b>Next</b>.</li>
+  <li>Enter a name for your project, then click <b>Next</b>. </li>
+  <li>On the next page, accept all defaults and click <b>Next</b>.</li>
+  <li>Make sure <b>Create a plug-in project using a code generation wizard</b> is selected, 
+    then select <b>Hello, World</b> from the list below and click <b>Next</b>.</li>
+  <li>Accept all the defaults on this page and click <b>Finish</b>.</li>
 </ol>
 <p>Now that we have a plugin project, we can create a build.xml file for it to 
   manage plugin deployment.</p>
