--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
@@ -13,19 +13,19 @@
 <P CLASS="Para">Now we are ready to use the build.xml Ant buildfile that was created 
   in the last sectrion:</P>
 <ol>
-  <li>Select the build.xml file in the Navigator and choose 'Run Ant...' from 
+  <li>Select the build.xml file in the Navigator and choose <b>Run Ant...</b> from 
     the context menu.</li>
   <li>In the Run Ant dialog, the Targets tab should be visible. Make sure that 
     'build.jars' is the only item in the list selected.</li>
-  <li>Switch to the Refresh tab. The options on this tab control if and how the 
+  <li>Switch to the <b>Refresh</b> tab. The options on this tab control if and how the 
     workspace looks for new, changed and deleted resources after the buildfile finishes 
     execution. Because refreshing can be an expensive operation, you should refresh 
     the smallest subset of the workspace necessary for your buildfile.</li>
-  <li>Check 'Refresh resources after running tool', then select '${project}' in 
+  <li>Check <b>Refresh resources after running tool</b>, then select <b>${project}</b> in 
     the list.<br>
     <img src="../images/Image606_refresh_tab.gif" alt="" border="0" width="474" height="498"> 
   </li>
-  <li>Click Run.</li>
+  <li>Click <b>Run</b>.</li>
   <li>The Ant buildfile runs, executing the build.jars target. Output from the buildfile 
     is visible in the Console view.</li>
   <li>When the buildfile finishes, notice that there is a new .jar file under your 
