--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
@@ -14,7 +14,7 @@
   noticed that when we created our project builder Ant buildfile, we had a choice 
   of external tool type:<br>
   <img src="../images/Image614_et_type_dialog.gif" alt="" border="0" width="326" height="220"> </P>
-<P CLASS="Para">The 'Program' option is essentially a catch-all, allowing you 
+<P CLASS="Para">The <b>Program</b> option is essentially a catch-all, allowing you 
   to define an external tool for any executable file that is accessible on your 
   local or network file system. Suppose that instead of Ant, you prefer to use 
   your own shell scripts or Windows .bat files to jar up and deploy your Eclipse 
@@ -22,10 +22,10 @@
   and how to execute your script. </P>
 <ol>
   <li>Create a script that performs your preferred deployment steps.</li>
-  <li>Select the project that you wish to build in the Navigator, and choose Properties 
+  <li>Select the project that you wish to build in the Navigator, and choose <b>Properties</b> 
     from the context menu.</li>
-  <li>Select 'External Tools Builders', click 'New...', select 'Program' and click 
-    OK.</li>
+  <li>Select <b>External Tools Builders</b>, click <b>New...</b>, select <b>Program</b> and click 
+    <b>OK</b>.</li>
   <li>The External Tools dialog appears, configured for Program type tools.</li>
   <li>Enter the location of your script, its working directory, and any required 
     arguments. <br>
@@ -34,10 +34,10 @@
   <li>In this case, the script is a Windows .bat file, but it could be a Linux 
     shell script, a Perl script or just about anything else that can be executed 
     on your system. </li>
-  <li>The Refresh and Build Options tabs are identical to the tabs we saw for 
-    Ant project builders. In particular, the Build Options tab allows us to control 
+  <li>The <b>Refresh</b> and <b>Build Options</b> tabs are identical to the tabs we saw for 
+    Ant project builders. In particular, the <b>Build Options</b> tab allows us to control 
     what types of builds trigger our project builder buildfile.</li>
-  <li>Apply the changes, and click OK.</li>
+  <li>Apply the changes, and click <b>OK</b>.</li>
   <li>As with Ant project builders, we can control the ordering of this project 
     builder with respect to other project builders (such as the default Java Builder 
     for Java projects).</li>
