--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -11,27 +11,27 @@
 <h3>
 Using the file menu</h3>
 <P CLASS="Para">
-You can create new resources by using the File &gt; New menu on the Workbench menubar.
+You can create new resources by using the <b>File &gt; New</b> menu on the Workbench menubar.
 Start by creating a simple project as follows:</P>
 <ol>
   <li>
 <P CLASS="Para">
-From the menubar, select File &gt; New &gt; Project...</P>
+From the menubar, select <b>File &gt; New &gt; Project...</b></P>
 <P CLASS="Para">
 <img src="../images/Image11_new_wizard.gif" alt="New Project Wizard" border="0" width="500" height="500"></P>
   </li>
   <li>
 <P CLASS="Para">
-In the left pane&nbsp; select <i>Simple</i>, and on the right, select Project; then click Next.&nbsp;</P>
+In the left pane&nbsp; select <b>Simple</b>, and on the right, select <b>Project</b>; then click <b>Next</b>.&nbsp;</P>
   </li>
   <li>
 <P CLASS="Para">
-In the <i> Project name </i> field, type your name as the name of your new project. Do not use spaces or special characters in the project name (e.g., &quot;JaneQuser&quot;).</P>
+In the <b> Project name </b> field, type your name as the name of your new project. Do not use spaces or special characters in the project name (e.g., &quot;JaneQuser&quot;).</P>
   </li>
   <li>
 <P CLASS="Para">
 Leave the box checked to use the default location for your new project. Click
-Finish when you are done.</P>
+<b>Finish</b> when you are done.</P>
 <P CLASS="Para">
 <img src="../images/Image12_new_project_wizard.gif" alt="New Project Wizard" border="0" width="500" height="500"></P>
 <P CLASS="Para">
@@ -48,9 +48,9 @@ the simple project we just created.&nbsp;
 
 
 <P>Create a second project called JaneQUser2 using the same steps, but instead of
-clicking finish, click Next. At this point you can specify other projects that project JaneQUser2
+clicking <b>Finish</b>, click <b>Next</b>. At this point you can specify other projects that project JaneQUser2
 depends on. Since we want to create two independent projects we will not select
-any of the projects in the <i>Referenced projects</i> table. Click finish to
+any of the projects in the <b>Referenced projects</b> table. Click <b>Finish</b> to
 create your second simple project.
 </P>
 
