--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12.htm
@@ -13,10 +13,11 @@ Navigating resources </h2>
 <P CLASS="Para">
 In this section we will work with the Navigator and Tasks views.&nbsp; These
 views are initially part of the resource perspective. If you want to experiment
-with other views, you can see them by using the Window &gt; Show View
+with other views, you can see them by using the <b>Window &gt; Show View</b>
 menu.</P>
 <P CLASS="Para">
-One important view to become familiar with is the Navigator view, which displays information about the contents of the Workbench and how the resources relate to each other in a hierarchy.</P>
+One important view to become familiar with is the Navigator view, which displays information 
+about the contents of the Workbench and how the resources relate to each other in a hierarchy.</P>
 <P CLASS="Para">
 In the Workbench, all resources reside in projects. Projects can contain folders and/or individual
 files.&nbsp;&nbsp;</P>
