--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
@@ -23,11 +23,11 @@ To open an editor on the file choose one of the following approaches:</P>
   <li>
     To edit a resource using the default editor for that resource you
 can either double click on the resource (in the Navigator), or select the
-resource and choose Open from its popup menu.&nbsp;<p>
+resource and choose <b>Open</b> from its popup menu.&nbsp;<p>
   </li>
   <li>
     If you want to use a specific editor to edit the resource, start
-by selecting the resource in the Navigator, and choose the Open With option from
+by selecting the resource in the Navigator, and choose the <b>Open With</b> option from
 the popup menu.<p>
   </li>
 </ul>
@@ -37,8 +37,8 @@ road.</p>
   </li>
 </ol>
 <P CLASS="Para">
-You can configure the default editors using&nbsp; Window &gt; Preferences &gt;
-Workbench &gt; File Associations.</P>
+You can configure the default editors using <b>Window &gt; Preferences &gt;
+Workbench &gt; File Associations</b>.</P>
 
 
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
