--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -20,18 +20,18 @@ Select the Navigator view. Its title bar will be highlighted (according to your
 operating system's color scheme).</P>
   </li>
   <li>
-    <P CLASS="Para"> Choose Go To &gt; Resource... from the Navigate menu in the 
+    <P CLASS="Para"> Choose <b>Go To &gt; Resource...</b> from the Navigate menu in the 
       toolbar.</P>
   </li>
   <li>
 <P CLASS="Para">In the Go To Resource dialog type &quot;JanesF&quot; into
-the <i>Pattern </i>field at the top of the dialog.</P>
+the <b>Pattern </b>field at the top of the dialog.</P>
 <P CLASS="Para">As you type the filename the dialog filters the set of possible
 matches based on what you have entered so far.</P>
   </li>
   <li>
 <P CLASS="Para">
-Select JanesFile.txt from the <i>Matching Resources</i>
+Select JanesFile.txt from the <b>Matching Resources</b>
 field and click OK. </P>
   </li>
   <li>
