--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
@@ -25,7 +25,7 @@ Select the JaneQuser project.</p>
   </li>
   <li>
 <P CLASS="Para">
-Choose Go Into from the popup menu.</P>
+Choose <b>Go Into</b> from the popup menu.</P>
   </li>
   <li>
 <p CLASS="Para">The Navigator now shows only the contents of the JaneQuser project.
