--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -18,19 +18,19 @@ You can use the Import wizard to copy resources into the Workbench.</P>
 Select the project JaneQuser.</p>
   </li>
   <li>
-    <P CLASS="Para"> Select Import from the popup.</P>
+    <P CLASS="Para"> Select <b>Import</b> from the popup.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the Import wizard, select File system, then click Next.</P>
+In the Import wizard, select <b>File system</b>, then click <b>Next</b>.</P>
 <P CLASS="Para">
 <img src="../images/Image38_import.gif" alt="Import Wizard" border="0" width="470" height="550"></P>
   </li>
   <li>
 <P CLASS="Para">
-In the <i> From directory </i> field, type or browse to select the directory
+In the <b>From directory</b> field, type or browse to select the directory
 containing the file JanesINIFile.ini that we recently exported.</P>
-<P CLASS="Para">Recent directories that you have imported from are shown on the <i>From directory</i>
+<P CLASS="Para">Recent directories that you have imported from are shown on the <b>From directory</b>
 field's combo box.</P>
 <blockquote>
   <P CLASS="Para">&nbsp;<img src="../images/Image41_import_combo.gif" alt="Import Wizard" border="0" width="535" height="42"></P>
@@ -41,18 +41,18 @@ field's combo box.</P>
 <P CLASS="Para"> Checking a folder in the left pane will import its entire contents into
 the Workbench. A grayed checkbox (as shown below) indicates that only some of the
 files in the folder will be imported into the Workbench.</P>
-    <P CLASS="Para">You can use the Filter Types... button to filter the types 
+    <P CLASS="Para">You can use the <b>Filter Types</b> button to filter the types 
       of files you want to import.</P>
 <P CLASS="Para"><img src="../images/Image39_import_tree.gif" alt="Import Wizard" border="0" width="543" height="583"></P>
   </li>
   <li>
-    <P CLASS="Para"> The <i>Into folder</i> field should already be filled in 
+    <P CLASS="Para"> The <b>Into folder</b> field should already be filled in 
       with the name of the project (JaneQuser).&nbsp; </P>
   </li>
   <li>
 <P CLASS="Para">You can change the destination project or folder by clicking
-Browse....&nbsp; </P>
-<P CLASS="Para">Click the Browse button and choose our second project
+<b>Browse</b>; </P>
+<P CLASS="Para">Click the <b>Browse</b> button and choose our second project
 JaneQUser2.&nbsp; </P>
 <blockquote>
   <blockquote>
@@ -63,7 +63,7 @@ JaneQUser2.&nbsp; </P>
   </li>
   <li>
 <P CLASS="Para">
-In the Options area, you can choose to:			 </P>
+In the <b>Options</b> area, you can choose to:			 </P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
 Overwrite existing resources without warning </LI>
@@ -73,7 +73,7 @@ Create complete folder structure or Create selected folders only</LI>
   </li>
   <li>
 <P CLASS="Para">
-Click Finish when you are done. The file JaneINIFile.ini is now shown in the
+Click <b>Finish</b> when you are done. The file JaneINIFile.ini is now shown in the
 Navigator in the project JaneQUser2.</P>
   </li>
 </ol>
