--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
@@ -18,7 +18,7 @@ JanesOtherFolder we are ready to rename something.&nbsp;</p>
   </li>
   <li>
 <P CLASS="Para">
-From the file's context menu, select Rename.</P>
+From the file's context menu, select <b>Rename</b>.</P>
   </li>
   <li>
 <p CLASS="Para">The Navigator overlays the file's name with a text field.&nbsp;&nbsp;Type in JanesText.txt and press Enter.</p>
@@ -30,7 +30,7 @@ From the file's context menu, select Rename.</P>
 <img src="../images/Image48_rename.gif" alt="Navigator view" border="0" width="180" height="177"></P>
 </blockquote>
 <P CLASS="Para">If you decide you do not want to rename a resource, you can press
-escape to dismiss the text field.</P>
+Escape to dismiss the text field.</P>
 </DIV>
   </li>
 </ol>
@@ -47,9 +47,9 @@ In the Navigator view, select the folder JanesOtherFolder.</P>
   </li>
   <li>
 <p CLASS="Para">
-From the folder's context menu choose Rename.</p>
+From the folder's context menu choose <b>Rename</b>.</p>
   </li>
-  <li>Once again the Navigator overlays the folder name with an entry field&nbsp; to allow
+  <li>Once again the Navigator overlays the folder name with an entry field to allow
 you to type in the new name. Change the folder name to be JanesSecondFolder.</li>
   <li>Rename the folder back to its original name (JanesOtherFolder).</li>
 </ol>
