--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -13,21 +13,21 @@
 <p>You can search for text strings in the Workbench as follows:</p>
 
 <ol>
-	<li>In the Workbench toolbar, click the Search button <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22">.</li>
-	<li>In the <i>Containing text</i> field, type in: <i>it</i>
+	<li>In the Workbench toolbar, click the search button <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22">.</li>
+	<li>In the <b>Containing text</b> field, type in: <i>it</i>
 		<br>
-    The combo box for the<em> Containing text</em> field also lets you select 
+    The combo box for the <b>Containing text</b> field also lets you select 
     from a list of recently performed searches.<br>
     <img src="../images/Image51_search_it.gif" alt="Search dialog" border="0" width="490" height="388"></li>
-	<li>You can select or deselect the <i> Case sensitive</i> check box depending on whether or not you want to perform a case sensitive or insensitive search.
-		<br>We want to search for lowercase &quot;<i>it</i>&quot; so check the <i>Case sensitive </i>box.</li>
-	<li>In the <i>File name patterns</i> field you can specify the kinds of files to include in your search.
-		<br>Click Browse... to open the <i>Select Types</i> dialog. This dialog provides you with a quick way to select from a list of registered extensions. <blockquote><img src="../images/Image51_choose_ext.gif" alt="Type Selection Dialog" border="0" width="347" height="469"></blockquote> 
-		For the moment we will confine our search to .txt files. Ensure *.txt is checked and click OK.</li>
-	<li>In the Scope field you can specify the files and folders to include in the search. The choices are: the entire workspace, the currently selected resources in the Workbench, or a working set which is a named, customized group of files and folders. Leave the scope as workspace.</li>
-	<li>The Customize button allows you to choose what kinds of searches are available in the dialog. This setting may be left unchanged.</li>
-	<li>Click Search.
-		<br>Note that you can click Cancel to cancel the search while it is in progress and that the Search dialog shows the progress of the search. <img src="../images/Image51_search_progress.gif" alt="Search Dialog" border="0" width="488" height="386"></li>
+	<li>You can select or deselect the <b>Case sensitive</b> check box depending on whether or not you want to perform a case sensitive or insensitive search.
+		<br>We want to search for lowercase &quot;<i>it</i>&quot; so check the <b>Case sensitive</b> box.</li>
+	<li>In the <b>File name patterns</b> field you can specify the kinds of files to include in your search.
+		Click <b>Browse...</b> to open the Select Types dialog. This dialog provides you with a quick way to select from a list of registered extensions. <blockquote><img src="../images/Image51_choose_ext.gif" alt="Type Selection Dialog" border="0" width="347" height="469"></blockquote> 
+		For the moment we will confine our search to .txt files. Ensure *.txt is checked and click <b>OK</b>.</li>
+	<li>In the <b>Scope</b> field you can specify the files and folders to include in the search. The choices are: the entire workspace, the currently selected resources in the Workbench, or a working set which is a named, customized group of files and folders. Leave the scope as workspace.</li>
+	<li>The <b>Customize</b> button allows you to choose what kinds of searches are available in the dialog. This setting may be left unchanged.</li>
+	<li>Click <b>Search</b>.
+		<br>Note that you can click <b>Cancel</b> to cancel the search while it is in progress and that the Search dialog shows the progress of the search. <img src="../images/Image51_search_progress.gif" alt="Search Dialog" border="0" width="488" height="386"></li>
 	<li>Observe that the Search view displays: <blockquote> <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="362" height="152"></blockquote></li>
 </ol>
 
