--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -12,8 +12,7 @@
 <h3>The Search view&nbsp;</h3>
 
 <p>Now that we have completed our search for &quot;it&quot; the
-Search view is visible. The
-title of the Search view shows that four matches were found.&nbsp;</p>
+Search view is visible. The title of the Search view shows that four matches were found.&nbsp;</p>
 <blockquote>
   <p>
   <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="362" height="152">&nbsp;&nbsp;</p>
@@ -30,18 +29,18 @@ view.&nbsp;</p>
 		<br>Click Show Next Match button two more times. Once again the Search view automatically opens the file.</li>
 	<li>It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu provides two ways to remove matches:
 		<ul>
-			<li>Remove Current Match - Removes the actual match that you are currently looking at. If a file contains multiple matches, as in our case, only the current match is removed.</li>
-			<li>Remove Selected Match - Removes the file entry and all matches in it.</li>
+			<li><b>Remove Current Match</b> - Removes the actual match that you are currently looking at. If a file contains multiple matches, as in our case, only the current match is removed.</li>
+			<li><b>Remove Selected Match</b> - Removes the file entry and all matches in it.</li>
 		</ul>
 	</li>
-	<li>Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match left.</li>
-	<li>Select&nbsp;JanesText.txt in the Search view.</li>
-	<li>Choose Remove Selected Match from the popup menu. 
+	<li>Choose <b>Remove Current Match</b> from the popup. Notice how JanesFile.txt only has one match left.</li>
+	<li>Select JanesText.txt in the Search view.</li>
+	<li>Choose <b>Remove Selected Match</b> from the popup menu. 
 		<br>The Search view now shows only one match for JanesFile.txt <blockquote><img src="../images/Image51_search_reduced.gif" alt="Search view" border="0" width="392" height="119"></blockquote></li>
 	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> in the Workbench's toolbar.</li>
 	<li>The Search view updates to show the results of the new search.
 		<br>You can move back and forth between your two search results using the drop down button on the Search view;s toolbar. <blockquote><img src="../images/Image51_search_switching.gif" alt="Search view" border="0" width="356" height="154"></p></blockquote></li>
-	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose Search Again to repeat the initial search. Notice that once again we have four matches.</li>
+	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose <b>Search Again</b> to repeat the initial search. Notice that once again we have four matches.</li>
 </ol>
 
 
