--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
@@ -13,8 +13,8 @@ New windows</h3>
 <p CLASS="Head">We have just seen how to open a perspective inside the current
 Workbench window. We can also open new perspectives in their own window.</p>
 <p CLASS="Head">By default, new perspectives are opened in the current window. You can configure
-this default behavior using Window &gt; Preferences &gt; Workbench &gt;
-Perspectives.</p>
+this default behavior using <b>Window &gt; Preferences &gt; Workbench &gt;
+Perspectives</b>.</p>
 <blockquote>
 <P>&nbsp;<img src="../images/Image71_pers_pref.gif" alt="Perspective preferences" border="0" width="503" height="284">
 </P>
