--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -21,13 +21,13 @@ Workbench also allows you to save this layout for future use.</P>
   <li>
         <p CLASS="Para">Drag the Outline view and stack it with the Navigator view.</li>
   <li>
-        <p CLASS="Para">Choose Window
-        &gt; Save Perspective As...&nbsp;</p>
+        <p CLASS="Para">Choose <b>Window
+        &gt; Save Perspective As...</b></p>
       </li>
   <li>
         <p CLASS="Para">The Save Perspective As dialog
         allows you to redefine and existing perspective or create a new perspective.
-        <p CLASS="Para">Click OK to update the Resource perspective and Yes to the subsequent
+        <p CLASS="Para">Click <b>OK</b> to update the Resource perspective and <b>Yes</b> to the subsequent
         confirmation dialog. The new perspective layout will be used if you
         reset the perspective or open a new one.</p>
         <blockquote>
@@ -39,14 +39,14 @@ Workbench also allows you to save this layout for future use.</P>
         the Outline view so that it is now stacked with the Tasks view.</P>
   </li>
   <li>
-        <p CLASS="Para">Choose Window &gt; Reset Perspective.
+        <p CLASS="Para">Choose <b>Window &gt; Reset Perspective</b>.
         Notice the Outline view is stacked with the Navigator. Originally
         when we first started the Workbench it was below the Navigator,
         but because we saved the perspective with Repositories and Outline
         stacked, it now considers this its initial layout.&nbsp;&nbsp;</p>
       </li>
   <li>
-<P CLASS="Para">Choose Window &gt; New Window to open a second window
+<P CLASS="Para">Choose <b>Window &gt; New Window</b> to open a second window
         showing the resource perspective. Observe that it uses the
         newly saved layout.&nbsp;</P>
   </li>
@@ -59,14 +59,14 @@ probably hoping there is some way to get back the original layout. To reset the
 Resource perspective to its original layout:</p>
 <ol>
   <li>
-        <p CLASS="Para">Choose Window &gt; Preferences.</p>
+        <p CLASS="Para">Choose <b>Window &gt; Preferences</b>.</p>
       </li>
   <li>
-        <p CLASS="Para">Expand Workbench and choose Perspectives.</p>
+        <p CLASS="Para">Expand <b>Workbench</b> and choose <b>Perspectives</b>.</p>
       </li>
   <li>
-        <p CLASS="Para">Select the Resource
-        perspective and click the Reset button and then Click OK.
+        <p CLASS="Para">Select the <b>Resource</b>
+        perspective and click the <b>Reset</b> button and then Click <b>OK</b>.
         <blockquote>
         <p CLASS="Para"><img src="../images/Image71_pers_reset.gif" alt="Reset Perspective" border="0" width="607" height="541"></blockquote>
       </li>
@@ -75,7 +75,7 @@ Resource perspective to its original layout:</p>
         the saved state
         of the perspective. If we also want to
         update the current copy of the Resource perspective that we are working
-        with we must also choose Window &gt; Reset Perspective from the Workbench's menubar.&nbsp;</p>
+        with we must also choose <b>Window &gt; Reset Perspective</b> from the Workbench's menubar.&nbsp;</p>
   </li>
 </ol>
 
