--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -21,7 +21,7 @@
 repository copy of file1.txt has a new line inserted (Fred-update).
 <p><img src="../images/Image83_jane4.gif" alt="Text Compare" border="0" width="444" height="195"></li>
   <li>
-<p CLASS="Para"> From the context menu of file1.txt choose Update. 
+<p CLASS="Para"> From the context menu of file1.txt choose <b>Update</b>. 
       This will cause your Workbench to be updated with the repository copy of 
       file1.txt. </p>
   </li>
@@ -32,8 +32,8 @@ modified.&nbsp;
   <li>If you are suspicious of the change you may want to find out some more information
 about it. To do this you first need to figure out who made the change
 and why.
-<p>In the Structure compare pane of the Synchronize view select file2.txt and choose Show in Resource
-History from the context menu.</p>
+<p>In the Structure compare pane of the Synchronize view select file2.txt and choose <b>Show in Resource
+History</b> from the context menu.</p>
 <p><img src="../images/Image84_reshist.gif" alt="Resource History" border="0" width="442" height="152"></p>
   </li>
   <li>In the Resource History view (see above) we can see there is a * next to 
@@ -48,8 +48,8 @@ History view thereby providing us with some insight into the intent of the chang
       merge in conflicting changes made to the repository. 
       <p>
 For now we will assume that Fred's change turns out to be the right one.
-      <p>Select file2.txt and choose Override and Update from the context menu. 
-        When asked to confirm the replacement choose Yes. 
+      <p>Select file2.txt and choose <b>Override and Update</b> from the context menu. 
+        When asked to confirm the replacement choose <b>Yes</b>. 
       </li>
   <li>The Update mode no longer has any remaining 
       incoming or conflicting changes.&nbsp; 
