--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
@@ -23,38 +23,38 @@
     the following content, and save changes.<br>
     <img src="../images/Image609_project_builder.gif" alt="" border="0" width="637" height="184"> 
   </li>
-  <li>In the Navigator, select the HW project and choose 'Properties' from its 
+  <li>In the Navigator, select the HW project and choose <b>Properties</b> from its 
     context menu.</li>
-  <li>In the project properties dialog, select 'External Tools Builders', then 
-    click 'New...'.<br>
+  <li>In the project properties dialog, select <b>External Tools Builders</b>, then 
+    click <b>New...</b>.<br>
   </li>
   <li>In the 'Choose configuration type' dialog, make sure 'Ant build' is selected, 
-    and click OK. </li>
+    and click <b>OK</b>. </li>
   <li>The External Tools dialog appears.Set the name to 'Makejar'. In the Main 
-    tab, use the first 'Browse Workspace...' button to set the Location to be 
-    the projectBuilder.xml buildfile created above. Then use the second 'Browse Workspace...' 
+    tab, use the first <b>Browse Workspace...</b> button to set the <b>Location</b> to be 
+    the projectBuilder.xml buildfile created above. Then use the second <b>Browse Workspace...</b> 
     button to set the Base Directory to be the HW project.<br>
     <img src="../images/Image611_et_main_tab.gif" alt="" border="0" width="470" height="576"> </li>
-  <li>In the Refresh tab, we want to be sure that when our HelloWorld.jar is created, 
+  <li>In the <b>Refresh</b> tab, we want to be sure that when our HelloWorld.jar is created, 
     we see it in Eclipse. By default, no refreshing is done when a project builder 
-    finishes running, so check 'Refresh resource after running tool', then select 
-    ${project} in the list of scope variables. Because refreshing can be expensive, 
+    finishes running, so check <b>Refresh resource after running tool</b>, then select 
+    <b>${project}</b> in the list of scope variables. Because refreshing can be expensive, 
     you should in general refresh the smallest entity that contains all resources 
     that will be affected by your buildfile. <br>
     <img src="../images/Image612_et_refresh_tab.gif" alt="" border="0" width="422" height="485"> 
   </li>
-  <li>In the Targets tab, the default target should be selected.</li>
-  <li>In the Build Options tab, you can specify when this project builder is executed. 
+  <li>In the <b>Targets</b> tab, the default target should be selected.</li>
+  <li>In the <b>Build Options</b> tab, you can specify when this project builder is executed. 
     By default, this is set to full builds and incremental builds. Running your 
     project builder during auto builds is possible, though not recommended because 
     of performance concerns.<br>
     <img src="../images/Image610_et_options_tab.gif" alt="" border="0" width="422" height="485"> 
   </li>
-  <li>Apply the changes and click OK.</li>
+  <li>Apply the changes and click <b>OK</b>.</li>
   <li>Back in the project properties dialog, you will now see a project builder 
     named 'Makejar' that is set to run after the default Java Builder. Note that 
     you can change the order so that your Ant buildfile runs before the Java builder, 
-    though that wouldn't make sense in this example. Click OK to save the project 
+    though that wouldn't make sense in this example. Click <b>OK</b> to save the project 
     builder and close the dialog.<br>
     <img src="../images/Image613_project_properties.gif" alt="" border="0" width="548" height="415"> 
   </li>
