--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
@@ -18,22 +18,22 @@
   in your workspace using the jar utility. </P>
 <ol>
   <li>Select some .jar file in your workspace.</li>
-  <li>Select 'External Tools...' from the External Tools workbench toolbar drop 
+  <li>Select <b>External Tools...</b> from the External Tools workbench toolbar drop 
     down.<br>
     <img src="../images/Image616_et_dropdown.gif" alt="" border="0" width="142" height="67"> 
   </li>
-  <li>Select 'Program' in the tree, then click New.<br>
+  <li>Select <b>Program</b> in the tree, then click <b>New</b>.<br>
     <img src="../images/Image617_jar_inspector.gif" alt="" border="0" width="625" height="567"> 
   </li>
   <li>Name the launch configuration 'jar inspector'.</li>
-  <li>Use the first 'Browse File System...' button to locate the jar executable.</li>
-  <li>In the Arguments field, type '-tvf' and a space, then click 'Variables...'.</li>
+  <li>Use the first <b>Browse File System...</b> button to locate the jar executable.</li>
+  <li>In the <b>Arguments</b> field, type '-tvf' and a space, then click <b>Variables...</b>.</li>
   <li>In the Select Variable dialog, you will see a number of variables you can 
-    pass as arguments to the program specified in Location. Select '${resource_loc}' 
-    and click OK. </li>
+    pass as arguments to the program specified in Location. Select <b>${resource_loc}</b> 
+    and click <b>OK</b>. </li>
   <li>When this buildfile is run, the absolute path of the resource selected in the 
     workbench will be passed to the jar utility in the position specified. </li>
-  <li>Click Run.</li>
+  <li>Click <b>Run</b>.</li>
   <li>Notice that the buildfile sends the jar utility output to the Console view.</li>
   <li>Select a different .jar file in your workspace.</li>
   <li>Click the External Tools button in the toolbar. Notice the contents of this 
