--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -38,9 +38,11 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <a href="../tasks/tasks-ant-running.htm">Running Ant build files</a><br>
 <a href="../tasks/tasks-ant-classpath.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new Ant tasks and types</a><br>
-<a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a></p>
+<a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a>
+</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-antprefs.htm">Ant preferences</a><br>
+<a href="../reference/ref-antruntimeprefs.htm">Ant runtime preferences</a><br>
 <a href="../reference/ref-antview.htm">Ant view</a>
 </p>
 <p>
