--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
@@ -214,8 +214,9 @@ selected.
 <p><br><img src="../images/ngrelc.gif" alt="Related concepts" border="0" width="159" height="27">
 <br><a href="concepts-antsupport.htm">Ant support</a>
 <br><a href="concepts-22.htm">Builds</a>
-<p><img src="../images/ngrelr.gif" alt="Related reference" border="0" width="159" height="27">
-<p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27">
+<p><img src="../images/ngrelr.gif" alt="Related reference" BORDER=0 width="159" height="27">
+<br><a href="../reference/ref-exttoolsprefs.htm">External Tools preferences</a>
+<p><img src="../images/ngrelt.gif" alt="Related tasks" BORDER=0 width="159" height="27">
 <br><a href="../tasks/tasks-exttools-running.htm">Running external tools</a>
 <br><a href="../tasks/tasks-ant-running.htm">Running Ant build files</a>
 <br>&nbsp;
